# ProjetV2

./: .breakpoints  .replit  main.py  pyproject.toml  register.html
static/: password.js  style.css
templates/: accueil.html  annonce.html  article.html  articleclothes.html  base.html  clothes.html  contact.html  login.html  phones.html  register.html  sneakers.html  test.html  xindex.html
templates/admin/: clothes.html  sneakers.html
