[tool.poetry]
name = "repl-nix-projetv2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_projetv2"}]

[tool.poetry.dependencies]
python = "^3.10"
bson = "^0.5.10"
flask = "^3.0.2"
pymongo = "^4.6.2"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
